--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-
-body {
-	font-family: Arial, Helvetica, sans-sarif;
-	background-color:white;
-}
-
-.container {
-	margin:auto;
-	overflow:hidden;
-	height:90vh;
-}
-
-.vertical-al {
-
-}
-
 .modall {
 	position:fixed;
 	z-index:2;
@@ -32,55 +16,62 @@ body {
 	color:yellow;
 }
 
+
+body {
+	background-color:white;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	font-family: 'Lato', sans-serif;
+}
+
+p, a{
+	font-family: 'Raleway', sans-serif;
+}
+
+
+
+.container {
+	margin:auto;
+	overflow:hidden;
+	height:90vh;
+}
+
+.vertical-al {
+
+}
+
+
 ul{
 	margin:0;
 	padding:0;
 }
 
-.emailbutton{
-	height:38px;
-	background:#F4AF1B;
-	border:0;
-	padding-left:20px;
-	padding-right:20px;
-	color:black;
-}
-
-header {
-	background-image:url("../TMA website/img/IMG_0434.jpg");
+.carousel-inner {
 	height:95vh;
-	background-size:cover;
-	background-attachment:fixed;
-	color:white;
 }
 
-header li {
+.carousel-item {
+	height:100%;
+}
+
+#navbar {
+	position:absolute;	
+	width:100%;
+	z-index: 2;
+}
+
+#navbar a{
 	text-decoration: none;
 	color:white;
-	float:right;
-	display: inline;
-	padding: 0 20px 0 20px;
 }
 
 #titulo {
-	display: flex;
-	flex-direction:column;
-	justify-content:center;
-	align-items: center;
-	padding-top:10%;
-}
-
-header #logo{
-	float:left;
-}
-
-#navbar{
-	width:100%;
-}
-
-header a:hover{
+	z-index: 2;
+	position:absolute;
+	top:25%;
 	color:white;
-	font-weight:bold;
+	width:100vw;
 }
 
 #skills{
